--- a/KooliProjekt/Views/Shared/_Header.cshtml
+++ b/KooliProjekt/Views/Shared/_Header.cshtml
@@ -16,6 +16,15 @@
                 <li>
                     <a asp-controller="Home" asp-action="Privacy">Privacy</a>
                 </li>
+                <li>
+                    <a asp-controller="Artists" asp-action="">Artists</a>
+                </li>
+                <li>
+                    <a asp-controller="ShowSchedules" asp-action="">ShowSchedules</a>
+                </li>
+                <li>
+                    <a asp-controller="MusicTracks" asp-action="">MusicTracks</a>
+                </li>
 
                 <!-- BEGIN TOP SEARCH -->
                 <li class="menu-search">
