--- a/KooliProjekt/Views/ShowSchedules/Index.cshtml
+++ b/KooliProjekt/Views/ShowSchedules/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PagedResult<KooliProjekt.Data.Artist>
+﻿@model PagedResult<KooliProjekt.Data.ShowSchedule>
 
 @{
     ViewData["Title"] = "Index";
@@ -13,7 +13,7 @@
     <thead>
         <tr>
             <th>
-                Name
+                date
             </th>
             <th></th>
         </tr>
@@ -22,7 +22,7 @@
 @foreach (var item in Model.Results) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                @Html.DisplayFor(modelItem => item.date)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
