--- a/KooliProjekt/Views/Home/Index.cshtml
+++ b/KooliProjekt/Views/Home/Index.cshtml
@@ -6,3 +6,9 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<formmethod ="post">
+    <input type = "file" name="myFile"/>
+    <button type="submit">Upload</button>
+
+</formmethod>
