--- a/KooliProjekt/Views/Artists/Index.cshtml
+++ b/KooliProjekt/Views/Artists/Index.cshtml
@@ -1,4 +1,4 @@
-﻿﻿@model ArtistsIndexModel
+﻿@model ArtistsIndexModel
 
 @{
     ViewData["Title"] = "Index";
@@ -13,7 +13,7 @@
 <form method="get">
     <div class="form-group">
         <label class="control-label">Name</label>
-        <input asp-for="Search.Name" class="form-control" />
+        <input asp-for="Search.Keyword" class="form-control" />
     </div>
     <div class="form-group">
         <button class="btn btn-primary">Otsi</button>
