--- a/KooliProjekt/Views/ShowSchedules/Index.cshtml
+++ b/KooliProjekt/Views/ShowSchedules/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PagedResult<KooliProjekt.Data.ShowSchedule>
+﻿@model KooliProjekt.Models.ShowSchedulesIndexModel
 
 @{
     ViewData["Title"] = "Index";
@@ -9,6 +9,18 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+<form method="get">
+    <div class="form-group">
+        <label class="control-label">Date</label>
+        <input asp-for="Search.Keyword" class="form-control" />
+    </div>
+    <div class="form-group">
+        <button class="btn btn-primary">Otsi</button>
+        <a asp-controller="ShowSchedules" asp-action="Index" class="btn btn-primary">Reset</a>
+    </div>
+</form>
+
 <table class="table">
     <thead>
         <tr>
@@ -19,7 +31,7 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Results) {
+@foreach (var item in Model.Data.Results) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.date)
@@ -33,4 +45,4 @@
 }
     </tbody>
 </table>
-@(await Component.InvokeAsync<PagerViewComponent>(Model))
+@(await Component.InvokeAsync<PagerViewComponent>(Model.Data))
