Sain controllerTerts valmis

--- a/KooliProjekt/Views/MusicTracks/Index.cshtml
+++ b/KooliProjekt/Views/MusicTracks/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PagedResult<KooliProjekt.Data.MusicTrack>
+﻿@model MusicTracksIndexModel
 
 @{
     ViewData["Title"] = "Index";
@@ -28,7 +28,7 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Results) {
+@foreach (var item in Model.Data.Results) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
@@ -51,4 +51,4 @@
 }
     </tbody>
 </table>
-@(await Component.InvokeAsync<PagerViewComponent>(Model))
+@(await Component.InvokeAsync<PagerViewComponent>(Model.Data))
